<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Imskia</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Weather">Weather</string>
    <string name="quran">Quran</string>
    <string name="duaa">Duaa</string>
    <string name="lastposition">Last position</string>
    <string name="Remaining">Remaining Time</string>
    <string name="Login_Fb">Login with faceBook</string>
    <string name="Login_TW">Login with twitter</string>
    <string name="ForgetPassword">Forget Password?</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="NewAccount">New account</string>
    <string name="sohour">Sohour</string>
    <string name="imsak">Imsak</string>
    <string name="fajar">Fajr</string>
    <string name="shorouq">Shoroq</string>
    <string name="duhr">Duhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Ishaa</string>
    <string name="PrayerTime">Prayer Times Settings</string>
    <string name="edit">Edit</string>
    <string name="qibla">Qibla</string>
    <string name="prayerTime_more">Prayer Times</string>
    <string name="our_branches_location">Our Branches Locations</string>
    <string name="about">About</string>
    <string name="Create_account">Create Account</string>
    <string name="UserName">UserName</string>
    <string name="selectCountry">Select Country</string>
    <string name="selectCity">Select City</string>
    <string name="selectlanguage">Select Language</string>
    <string name="language">Language</string>
    <string name="setting">Setting</string>
    <string name="tv_name">CBC</string>
    <string name="tv_category">TV Channel</string>
    <string name="quran_pages_number">عدد الآيات</string>
    <string name="quran_sora_name">اسم السورة</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="branch_full_Address">Branch Full Address</string>
    <string name="branch_working_hour">Branch Working Hour</string>
    <string name="branch_number_call">Branch Number Call</string>
    <string name="laylat_qadr">Laylat Al-Qadr</string>
    <string name="charity">Charity Guide</string>
    <string name="provisions">Provisions of Fasting</string>
    <string name="keep_healthy">Keep healthy</string>
    <string name="greeting">Send greeting cards</string>
    <string name="save_button">Save</string>
    <string name="refresh_button">Refresh</string>
    <string name="ok_button">OK</string>
    <string name="alert_dialog_title">Profile</string>
    <string name="alert_dialog_success">Saved!</string>
    <string name="alert_dialog_failed">Failed with error.</string>
    <string name="tv_guid">TV Guid</string>
    <string name="tv_program_name">Program Name</string>
    <string name="tv_channel_list">Channel List</string>
    <string name="tv_presenter">Presenter : </string>
    <string name="tv_show_days">Show Days : </string>
    <string name="tv_show_time">Show Time : </string>
    <string name="tv_presenter_value"> Naglaa</string>
    <string name="tv_show_days_value"> Sunday - Monday every week</string>
    <string name="tv_show_time_value"> 7:00 PM</string>
    <string name="tv_follow">Follow</string>
    <string name="about_app_version">Version</string>
    <string name="about_app_developed_by">Developed By \n Novelty Company</string>
    <string name="about_app_company">Novaity</string>
    <string name="about_app_description">The word Ramadan comes from the Arabic root ramiḍa or ar-ramaḍ, which means scorching heat or dryness.[8] Fasting is fardh ("obligatory") for adult Muslims, except those who are suffering from an illness, travelling, are elderly, pregnant, breastfeeding, diabetic or going through menstrual bleeding.</string>
    <string name="share">Share</string>
    <string name="followers">Followers</string>
    <string name="restaurants">Restaurants</string>
    <string name="spectra">Welcome to Spectra \n
As a team work of Spectra Restaurant and Café, we aim at promoting the 
foodstuff industry through the branches, we establish and through the new dishes. \n</string>
<string name="show_all_branches">Show all branches</string>
<string name="show_menu">Show Menu</string>

</resources>