<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/actionbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bar" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/Create_account"
            android:textColor="@color/titleColor"
            android:textSize="8pt" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/cancel" />

            <ImageView
                android:id="@+id/done_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/done_dim" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:src="@drawable/profile_img" />

    <EditText
        android:id="@+id/usernameEdt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/field_txt"
        android:ems="10"
        android:gravity="left|center"
        android:hint="@string/UserName"
        android:padding="10dp"
        android:textColor="#fff" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/emailEdt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/field_txt"
        android:ems="10"
        android:gravity="left|center"
        android:hint="@string/Email"
        android:padding="10dp"
        android:textColor="#fff" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwEdt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/field_txt"
        android:ems="10"
        android:gravity="left|center"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#fff" >

        <requestFocus />
    </EditText>

    <RelativeLayout
        android:id="@+id/select_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/list_item" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dip"
            android:text="@string/selectCountry"
            android:textColor="@color/titleColor" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow"
            android:translationY="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/select_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/list_item" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dip"
            android:text="@string/selectCity"
            android:textColor="@color/titleColor" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow"
            android:translationY="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/select_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/list_item" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dip"
            android:text="@string/selectlanguage"
            android:textColor="@color/titleColor" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow"
            android:translationY="10dp" />
    </RelativeLayout>

</LinearLayout>