<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/list_item"
            android:padding="20dp" >

            <ImageView
                android:id="@+id/userpic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:scaleType="fitCenter"
                android:src="@drawable/pic" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/userpic"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="User Name"
                    android:textColor="@color/titleColor" />

                <TextView
                    android:id="@+id/city_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="City-country"
                    android:textColor="#fff" />
            </LinearLayout>

            <Button
                android:id="@+id/edit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/titleColor"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:text="@string/edit"
                android:textColor="#000" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/prayerlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_item_arrow"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/prayer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dip"
                android:text="@string/prayerTime_more"
                android:textColor="@color/titleColor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/quranlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_item_arrow"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/quran_selected" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dip"
                android:text="@string/quran"
                android:textColor="@color/titleColor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/laylatlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_item_arrow"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/laylatqadr_selected" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dip"
                android:text="@string/laylat_qadr"
                android:textColor="@color/titleColor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/branchslay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_item_arrow"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/branch" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dip"
                android:text="@string/our_branches_location"
                android:textColor="@color/titleColor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/charitylay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_item_arrow"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/charity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dip"
                android:text="@string/charity"
                android:textColor="@color/titleColor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/provisionslay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_item_arrow"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/fasting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dip"
                android:text="@string/provisions"
                android:textColor="@color/titleColor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/keep_healthylay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_item_arrow"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/healthy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dip"
                android:text="@string/keep_healthy"
                android:textColor="@color/titleColor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/greetinglay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_item_arrow"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/greeting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dip"
                android:text="@string/greeting"
                android:textColor="@color/titleColor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/shareLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_item_arrow"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dip"
                android:text="@string/share"
                android:textColor="@color/titleColor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/aboutlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_item_arrow"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/about" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dip"
                android:text="@string/about"
                android:textColor="@color/titleColor" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>